--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pacifica/userinterface-core",
+    "name": "pacifica/pacifica",
     "description": "Drupal core module for Pacifica user interfaces.",
     "type": "drupal-module",
     "license": "LGPL-3.0-or-later",
